Add show error data on 404 page. Resolves #28